--- a/client/src/app/requiro/components/main-call/main-call.component.html
+++ b/client/src/app/requiro/components/main-call/main-call.component.html
@@ -5,11 +5,14 @@
     </mat-card-content>
 </mat-card>
 
-<dlab-timer [time]="timerTime" [player]="player" (timer)=timerFinished($event) *ngIf="timerActive && currentCustomer && !ready && !error"></dlab-timer>
+<dlab-timer [time]="timerTime" [player]="player" (timer)=timerFinished($event)
+    *ngIf="timerActive && currentCustomer && !ready && !error"></dlab-timer>
 
 <div *ngIf="!timerActive" style="margin: 15px;"></div>
 
-<customer-player [customer]="currentCustomer" [index-current-phone]="indexCurrentPhone" [timerActive]="timerActive" [contador]="counter" [playerStatus]="player" (detailEvent)="showDetail($event)" (callPhone)="initCall($event)" *ngIf="currentCustomer && !ready && !error"></customer-player>
+<customer-player [customer]="currentCustomer" [index-current-phone]="indexCurrentPhone" [timerActive]="timerActive"
+    [contador]="counter" [playerStatus]="player" (detailEvent)="showDetail($event)" (callPhone)="initCall($event)"
+    *ngIf="currentCustomer && !ready && !error"></customer-player>
 
 <fury-scrollbar class="dashboard" furyPage furyPagePadding fxLayout="column" *ngIf="(ready  && !error) || _showDetails">
     <div furyScrollbar #contentScroll [ngClass]="{'customerDetail': !ready}">
@@ -17,13 +20,15 @@
             <!--<div *ngIf="ready  && !error && currentCustomer"> -->
             <div style="text-align:right;font-size: xx-large;">
                 <label *ngIf="temporizadorActive">Tiempo restante: {{labelTemporizador}}</label>
-            </div>    
+            </div>
             <div *ngIf="currentCustomer">
-                <event-customer [customer-id]="currentCustomer.id" [idsPayment]="idsPayment" [timerActive]="timerActive" [index-current-phone]="indexCurrentPhone"></event-customer>
+                <event-customer [customer-id]="currentCustomer.id" [idsPayment]="idsPayment" [timerActive]="timerActive"
+                    [index-current-phone]="indexCurrentPhone"></event-customer>
             </div>
             <div fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap.gt-sm="16px">
                 <div [fxFlex]="customers&&customers.length>1&&isMoraTardia()?'75%':'100%'">
-                    <customer-data [currentCustomer]="currentCustomer" (changeIndexPhone)="changeCurrentIndexPhone($event)"></customer-data>
+                    <customer-data [currentCustomer]="currentCustomer" [currentDebts]="debts"
+                        (changeIndexPhone)="changeCurrentIndexPhone($event)"></customer-data>
                     <debt-data [customer-id]="currentCustomer.id" [debts]="debts"></debt-data>
                 </div>
                 <div fxFlex *ngIf="customers&&customers.length>1&&isMoraTardia()">
