--- a/client/src/app/requiro/components/event-customer/event-customer.component.html
+++ b/client/src/app/requiro/components/event-customer/event-customer.component.html
@@ -1,30 +1,34 @@
 <mat-card *ngIf="currentCustomer">
     <mat-card-header *ngIf="currentCustomer">
         <i class="material-icons">phone</i>
-        <input *ngIf="currentCustomer.phones && currentCustomer.phones.length > 0" style="font-size: 25px;width: 150px;" type="text" disabled [(ngModel)]="currentCustomer.phones[indexPhone]">
+        <input *ngIf="currentCustomer.phones && currentCustomer.phones.length > 0" style="font-size: 25px;width: 150px;"
+            type="text" disabled [(ngModel)]="currentCustomer.phones[indexPhone]">
         <span fxFlex></span>
-        <span class="{{eventAnnotationClass}}" style="font-weight: bold;text-align: center;font-size: 30px;" *ngIf="progressiveTimer > 0 && timerActive">
-      <i class="material-icons">
-        access_time
-      </i>
-      Tiempo transcurrido: {{progressiveTimer}}s
-      <i class="material-icons">
-        timelapse
-      </i>
-      Tiempo restante {{totalTime}}s
-    </span>
+        <span class="{{eventAnnotationClass}}" style="font-weight: bold;text-align: center;font-size: 30px;"
+            *ngIf="progressiveTimer > 0 && timerActive">
+            <i class="material-icons">
+                access_time
+            </i>
+            Tiempo transcurrido: {{progressiveTimer}}s
+            <i class="material-icons">
+                timelapse
+            </i>
+            Tiempo restante {{totalTime}}s
+        </span>
     </mat-card-header>
     <div *ngIf="currentCustomer">
         <div style="margin: 10px;">
             <div class="container">
                 <div fxLayout.gt-sm="row" fxLayoutGap.gt-sm="16px">
                     <mat-form-field *ngIf="currentCustomer && eventTypes">
-                        <mat-select placeholder="Campaña" *ngIf="eventTypes" [(ngModel)]="currentCustomer.idCampaign" (change)="eventChange()">
+                        <mat-select placeholder="Campaña" *ngIf="eventTypes" [disabled]="opcionBloqueada"
+                            [(ngModel)]="currentCustomer.idCampaign" (change)="eventChange()">
                             <mat-option [value]="c.id" *ngFor="let c of champaign">{{c.name}}</mat-option>
                         </mat-select>
                     </mat-form-field>
                     <mat-form-field *ngIf="eventTypes">
-                        <mat-select placeholder="Resultado" [(ngModel)]="resultInteraction" [formControl]="resultCtrl" (ngModelChange)="changeEventType()">
+                        <mat-select placeholder="Resultado" [(ngModel)]="resultInteraction" [formControl]="resultCtrl"
+                            (ngModelChange)="changeEventType()">
                             <mat-option *ngFor="let e of eventTypes" [value]="e.id">{{e.name}}</mat-option>
                         </mat-select>
                     </mat-form-field>
@@ -39,29 +43,36 @@
                         </mat-select>
                     </mat-form-field>
                     <mat-form-field *ngIf="currentCustomer.idCampaign === 3">
-                        <input matInput [matDatepicker]="picker" readonly placeholder="Fecha de promesa de pago" [(ngModel)]="newEngagement.paymentPromiseDate">
+                        <input matInput [matDatepicker]="picker" readonly placeholder="Fecha de promesa de pago"
+                            [(ngModel)]="newEngagement.paymentPromiseDate">
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-datepicker #picker></mat-datepicker>
                     </mat-form-field>
                     <mat-form-field *ngIf="currentCustomer.idCampaign === 3">
                         <mat-select placeholder="Cantidad de cuotas:" [(ngModel)]="newEngagement.numberOfFees">
-                            <mat-option *ngFor="let i of [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36]" [value]="i">{{i}}</mat-option>
+                            <mat-option
+                                *ngFor="let i of [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36]"
+                                [value]="i">{{i}}</mat-option>
                         </mat-select>
                     </mat-form-field>
                     <mat-form-field *ngIf="currentCustomer.idCampaign === 3">
-                        <input matInput placeholder="Importe de la cuota" type="number" [(ngModel)]="newEngagement.amountFees">
+                        <input matInput placeholder="Importe de la cuota" type="number"
+                            [(ngModel)]="newEngagement.amountFees">
                     </mat-form-field>
                 </div>
                 <div *ngIf="currentCustomer.idCampaign === 3">
                     <div fxLayout.gt-sm="row" fxLayoutGap.gt-sm="16px">
                         <mat-form-field fxFlex>
-                            <input matInput placeholder="Deuda acordada" type="number" [(ngModel)]="newEngagement.agreedDebt">
+                            <input matInput placeholder="Deuda acordada" type="number"
+                                [(ngModel)]="newEngagement.agreedDebt">
                         </mat-form-field>
                         <mat-form-field fxFlex>
-                            <input matInput placeholder="Entrega inicial:" type="number" [(ngModel)]="newEngagement.initialDelivery">
+                            <input matInput placeholder="Entrega inicial:" type="number"
+                                [(ngModel)]="newEngagement.initialDelivery">
                         </mat-form-field>
                         <mat-form-field fxFlex>
-                            <mat-select placeholder="Sucursal" [(ngModel)]="newEngagement.idBranchOffice" (ngModelChange)="eventChange()">
+                            <mat-select placeholder="Sucursal" [(ngModel)]="newEngagement.idBranchOffice"
+                                (ngModelChange)="eventChange()">
                                 <mat-option *ngFor="let b of branchOffices" [value]="b.id">{{b.name}}</mat-option>
                             </mat-select>
                         </mat-form-field>
@@ -69,7 +80,8 @@
                 </div>
                 <div *ngIf="currentCustomer &&  currentCustomer.idCampaign === 3">
                     <mat-form-field>
-                        <input matInput [matDatepicker]="picker2" readonly placeholder="Llamar de nuevo" [(ngModel)]="newEngagement.callAgain">
+                        <input matInput [matDatepicker]="picker2" readonly placeholder="Llamar de nuevo"
+                            [(ngModel)]="newEngagement.callAgain">
                         <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                         <mat-datepicker #picker2></mat-datepicker>
                     </mat-form-field>
@@ -82,16 +94,18 @@
                 </div>
                 <div fxLayout="row" *ngIf="showMessage()">
                     <mat-form-field fxFlex>
-                        <textarea matInput placeholder="Comentario:" flex [formControl]="messageCtrl" [(ngModel)]="newMessage"></textarea>
+                        <textarea matInput placeholder="Comentario:" flex [formControl]="messageCtrl"
+                            [(ngModel)]="newMessage"></textarea>
                     </mat-form-field>
                 </div>
                 <div class="actions" fxLayout="row" fxLayoutGap="8px">
-                    <button mat-raised-button (click)="toogleHistory()" [color]="engagementColor" *ngIf="historyEngagament && currentCustomer && currentCustomer.idCampaign === 3">
-            <i class="material-icons">history</i> Compromisos
-          </button>
+                    <button mat-raised-button (click)="toogleHistory()" [color]="engagementColor"
+                        *ngIf="historyEngagament && currentCustomer && currentCustomer.idCampaign === 3">
+                        <i class="material-icons">history</i> Compromisos
+                    </button>
                     <button mat-raised-button [color]="eventsColor" (click)="toogleEventsHistory()">
-            <i class="material-icons">speaker_notes</i> Eventos
-          </button>
+                        <i class="material-icons">speaker_notes</i> Eventos
+                    </button>
                     <span fxFlex></span>
                     <button mat-raised-button color="primary" (click)="saveAnnotation()">Enviar</button>
                     <!--
@@ -100,7 +114,8 @@
         -->
                 </div>
                 <div *ngIf="showEngagamentHistory">
-                    <table class="table table-hover table-striped" fxFlex *ngIf="customerEngagamentes && customerEngagamentes.length > 0">
+                    <table class="table table-hover table-striped" fxFlex
+                        *ngIf="customerEngagamentes && customerEngagamentes.length > 0">
                         <tr>
                             <td>Fecha de promesa de pago</td>
                             <td>Cantidad de cuotas</td>
